Fixed Sidebar alignment

--- a/web/src/app/products/Products.css
+++ b/web/src/app/products/Products.css
@@ -30,19 +30,15 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.02);
     display: flex;
     flex-direction: column;
+    margin-top: 84px !important;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .filters-sidebar::-webkit-scrollbar {
     display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.filters-sidebar {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
 }
 
 .filters-header {
